--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"]
+    },
+    "jsx": "react-native" // Ensure compatibility with React Native
   },
   "include": [
     "**/*.ts",
