--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,6 @@
 {
+  "compilerOptions": {},
   "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "@/*": ["./*"]
-    },
-    "jsx": "react-native" // Ensure compatibility with React Native
-  },
   "include": [
     "**/*.ts",
     "**/*.tsx",
