Add Owner Field to app.json: Include the owner identifier for the application, enhancing project metadata and configuration clarity.

--- a/app.json
+++ b/app.json
@@ -45,6 +45,7 @@
       "eas": {
         "projectId": "962996f1-8054-4cf8-8f93-c3df9e0a1d69"
       }
-    }
+    },
+    "owner": "amanya123"
   }
 }
