Add EAS Project ID to app.json: Introduce projectId under extra settings for EAS integration, enhancing project configuration for deployment.

--- a/app.json
+++ b/app.json
@@ -41,6 +41,9 @@
     "extra": {
       "router": {
         "origin": false
+      },
+      "eas": {
+        "projectId": "ff7563d9-3227-4457-9b93-6217b6b1fd2f"
       }
     },
     "owner": "amanya123"
